# server/router/api/v1/user_service.go
@@ -327,9 +327,10 @@ func (s *APIV1Service) DeleteUser(ctx context.Context, request *v1pb.DeleteUserR
 
 func getDefaultUserGeneralSetting() *v1pb.UserSetting_GeneralSetting {
 	return &v1pb.UserSetting_GeneralSetting{
-		Locale:         "en",
-		MemoVisibility: "PRIVATE",
-		Theme:          "",
+		Locale:            "en",
+		MemoVisibility:    "PRIVATE",
+		Theme:             "",
+		MemoInsightPrompt: "",
 	}
 }
 
@@ -418,9 +419,10 @@ func (s *APIV1Service) UpdateUserSetting(ctx context.Context, request *v1pb.Upda
 	}
 
 	updatedGeneral := &v1pb.UserSetting_GeneralSetting{
-		MemoVisibility: generalSetting.GetMemoVisibility(),
-		Locale:         generalSetting.GetLocale(),
-		Theme:          generalSetting.GetTheme(),
+		MemoVisibility:    generalSetting.GetMemoVisibility(),
+		Locale:            generalSetting.GetLocale(),
+		Theme:             generalSetting.GetTheme(),
+		MemoInsightPrompt: generalSetting.GetMemoInsightPrompt(),
 	}
 
 	// Apply updates for fields specified in the update mask
@@ -433,6 +435,8 @@ func (s *APIV1Service) UpdateUserSetting(ctx context.Context, request *v1pb.Upda
 			updatedGeneral.Theme = incomingGeneral.Theme
 		case "locale":
 			updatedGeneral.Locale = incomingGeneral.Locale
+		case "memo_insight_prompt":
+			updatedGeneral.MemoInsightPrompt = incomingGeneral.MemoInsightPrompt
 		default:
 			// Ignore unsupported fields
 		}
@@ -1043,9 +1047,10 @@ func convertUserSettingFromStore(storeSetting *storepb.UserSetting, userID int32
 		if general := storeSetting.GetGeneral(); general != nil {
 			setting.Value = &v1pb.UserSetting_GeneralSetting_{
 				GeneralSetting: &v1pb.UserSetting_GeneralSetting{
-					Locale:         general.Locale,
-					MemoVisibility: general.MemoVisibility,
-					Theme:          general.Theme,
+					Locale:            general.Locale,
+					MemoVisibility:    general.MemoVisibility,
+					Theme:             general.Theme,
+					MemoInsightPrompt: general.MemoInsightPrompt,
 				},
 			}
 		} else {
@@ -1091,9 +1096,10 @@ func convertUserSettingToStore(apiSetting *v1pb.UserSetting, userID int32, key s
 		if general := apiSetting.GetGeneralSetting(); general != nil {
 			storeSetting.Value = &storepb.UserSetting_General{
 				General: &storepb.GeneralUserSetting{
-					Locale:         general.Locale,
-					MemoVisibility: general.MemoVisibility,
-					Theme:          general.Theme,
+					Locale:            general.Locale,
+					MemoVisibility:    general.MemoVisibility,
+					Theme:             general.Theme,
+					MemoInsightPrompt: general.MemoInsightPrompt,
 				},
 			}
 		} else {
